@@ -1,6 +1,10 @@
-﻿zg 09.03.2015 20:27:35 +0200 - build 4299
+﻿drkns 09.03.2015 23:54:31 +0200 - build 4300
 
-1. опечатка в 4298. 
+1. Уточнение 4298.
+
+zg 09.03.2015 20:27:35 +0200 - build 4299
+
+1. опечатка в 4298.
 
 drkns 09.03.2015 19:35:06 +0200 - build 4298
 
